--- a/src/main/resources/assets/sololeveling/lang/en_us.json
+++ b/src/main/resources/assets/sololeveling/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.sololeveling.crystal_shard": "Mana Crystal Shard",
   "block.sololeveling.mana_crystal": "Mana Crystal",
 
   "itemgroup.sololeveling": "Solo Leveling"
